// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldLayout.svelte > should render error when elements is missing 1`] = `
<error>
  Invalid schema. Expected schema to include an 'elements' array.
</error>
`;

exports[`FieldLayout.svelte > should render error when elements is not an array 1`] = `
<error>
  Invalid schema. Expected schema to include an 'elements' array.
</error>
`;

exports[`FieldLayout.svelte > should render groups 1`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
    <field-layout
      aria-label=""
      class="horizontal "
    >
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="name.first"
        >
          First Name
        </label>
         
        <field
          aria-label="First Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="name.first"
            name="name.first"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="name.last"
        >
          Last Name
        </label>
         
        <field
          aria-label="Last Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="name.last"
            name="name.last"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      
    </field-layout>
    
    
    
    
    <input-field
      class="flex flex-col input-number "
    >
      <label
        for="age"
      >
        Age
      </label>
       
      <field
        aria-label="Age"
        class="w-full flex flex-row items-center"
      >
         
         
        <input
          id="age"
          max="100"
          min="0"
          name="age"
          type="number"
        />
        
        
         
      </field>
       
    </input-field>
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render groups 2`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
    <field-layout
      aria-label=""
      class="horizontal "
    >
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="name.first"
        >
          First Name
        </label>
         
        <field
          aria-label="First Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="name.first"
            name="name.first"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="name.last"
        >
          Last Name
        </label>
         
        <field
          aria-label="Last Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="name.last"
            name="name.last"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      
    </field-layout>
    
    
    
    
    <input-field
      class="flex flex-col input-number "
    >
      <label
        for="age"
      >
        Age
      </label>
       
      <field
        aria-label="Age"
        class="w-full flex flex-row items-center"
      >
         
         
        <input
          id="age"
          max="100"
          min="0"
          name="age"
          type="number"
        />
        
        
         
      </field>
       
    </input-field>
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render groups with custom wrapper 1`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
    <field-layout
      class="horizontal"
    >
      <h1>
        A Group
      </h1>
       
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="name.first"
        >
          First Name
        </label>
         
        <field
          aria-label="First Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="name.first"
            name="name.first"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="name.last"
        >
          Last Name
        </label>
         
        <field
          aria-label="Last Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="name.last"
            name="name.last"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      
    </field-layout>
    
    
    
    
    <input-field
      class="flex flex-col input-number "
    >
      <label
        for="age"
      >
        Age
      </label>
       
      <field
        aria-label="Age"
        class="w-full flex flex-row items-center"
      >
         
         
        <input
          id="age"
          max="100"
          min="0"
          name="age"
          type="number"
        />
        
        
         
      </field>
       
    </input-field>
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render groups with custom wrapper 2`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
    <field-layout
      class="horizontal"
    >
      <h1>
        A Group
      </h1>
       
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="name.first"
        >
          First Name
        </label>
         
        <field
          aria-label="First Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="name.first"
            name="name.first"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="name.last"
        >
          Last Name
        </label>
         
        <field
          aria-label="Last Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="name.last"
            name="name.last"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      
    </field-layout>
    
    
    
    
    <input-field
      class="flex flex-col input-number "
    >
      <label
        for="age"
      >
        Age
      </label>
       
      <field
        aria-label="Age"
        class="w-full flex flex-row items-center"
      >
         
         
        <input
          id="age"
          max="100"
          min="0"
          name="age"
          type="number"
        />
        
        
         
      </field>
       
    </input-field>
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render groups without key 1`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
    <field-layout
      aria-label=""
      class="horizontal "
    >
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="first"
        >
          First Name
        </label>
         
        <field
          aria-label="First Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="first"
            name="first"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="last"
        >
          Last Name
        </label>
         
        <field
          aria-label="Last Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="last"
            name="last"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      
    </field-layout>
    
    
    
    
    <input-field
      class="flex flex-col input-number "
    >
      <label
        for="age"
      >
        Age
      </label>
       
      <field
        aria-label="Age"
        class="w-full flex flex-row items-center"
      >
         
         
        <input
          id="age"
          max="100"
          min="0"
          name="age"
          type="number"
        />
        
        
         
      </field>
       
    </input-field>
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render groups without key 2`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
    <field-layout
      aria-label=""
      class="horizontal "
    >
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="first"
        >
          First Name
        </label>
         
        <field
          aria-label="First Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="first"
            name="first"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      <input-field
        class="flex flex-col input-text "
      >
        <label
          for="last"
        >
          Last Name
        </label>
         
        <field
          aria-label="Last Name"
          class="w-full flex flex-row items-center"
        >
           
           
          <input
            id="last"
            name="last"
            type="text"
          />
          
          
           
        </field>
         
      </input-field>
      
      
    </field-layout>
    
    
    
    
    <input-field
      class="flex flex-col input-number "
    >
      <label
        for="age"
      >
        Age
      </label>
       
      <field
        aria-label="Age"
        class="w-full flex flex-row items-center"
      >
         
         
        <input
          id="age"
          max="100"
          min="0"
          name="age"
          type="number"
        />
        
        
         
      </field>
       
    </input-field>
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render items using custom component 1`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
     
    
    
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render items using custom component 2`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
     
    
    
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render items using default component 1`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
     
    
    
    
    
  </field-layout>
  
  
  
</div>
`;

exports[`FieldLayout.svelte > should render set of inputs 1`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  >
    <input-field
      class="flex flex-col input-text "
    >
      <label
        for="name"
      >
        Name
      </label>
       
      <field
        aria-label="Name"
        class="w-full flex flex-row items-center"
      >
         
         
        <input
          id="name"
          name="name"
          type="text"
        />
        
        
         
      </field>
       
    </input-field>
    
    <input-field
      class="flex flex-col input-number "
    >
      <label
        for="age"
      >
        Age
      </label>
       
      <field
        aria-label="Age"
        class="w-full flex flex-row items-center"
      >
         
         
        <input
          id="age"
          max="100"
          min="0"
          name="age"
          type="number"
        />
        
        
         
      </field>
       
    </input-field>
    
    
  </field-layout>
  
  
  
</div>
`;
